# dreams-lab-portal

./: .env.example  .gitignore  .gitmodules  .replit  DEEPGIS_XR_ARCHITECTURE_DIAGRAM.md  DEEPGIS_XR_COMPETITIVE_ANALYSIS.md  DEEPGIS_XR_URL_PATTERN_ANALYSIS.md  DEEPGIS_XR_URL_QUICK_REFERENCE.md  DJANGO_APPS_STRUCTURE_ANALYSIS.md  Dockerfile  HACKATHON_QUICKSTART.md  HACKATHON_README.md  HACKATHON_TEAM_ASSIGNMENTS.md  NGINX_AI_ANALYSIS_FIX.md  README.md  ROCK_TILES_QUICKSTART.md  ROSBAG_INTEGRATION_PLAN.md  THANKSGIVING_2025_AI_HACKATHON_PLAN.md  collect_static.sh  cookies.txt  db.sqlite3  deepgis-xr  deepgis.csr  deepgis.org.conf  digitalocean.ini  docker-compose.yml  dreamslab.deepgis.org.conf  entrypoint.sh  init-letsencrypt.sh  lecture2.tex  manage.py  nginx.conf  openuav2  renew-cert.sh  replit.nix  requirements.txt  run_blender.py  run_container.sh  start_openuav.sh  startup.sh  (+1 more)
DeepGIS/: models.py
dreams_laboratory/: .views.py.swp  PIXHAWK_TELEMETRY_ORM.md  admin.py  apps.py  asgi.py  authentication.py  db_routers.py  models.py  quiz_views.py  settings.py  tutorials.py  urls.py  views.py  wsgi.py
earthinnovationhub.org/: cart  index.html  journal?author=5f371ce688905731d0e20224  (+2 more)
ros2_ws/src/kernelcal_earth_rover/: package.xml  setup.cfg  setup.py
ros2_ws/src/kernelcal_earth_rover/config/: earth_rover.yaml
ros2_ws/src/kernelcal_earth_rover/kernelcal_earth_rover/: __init__.py  attributor_node.py  observation_publisher_node.py  sq_fit_node.py  wire.py
ros2_ws/src/kernelcal_earth_rover/launch/: earth_rover.launch.py
ros2_ws/src/kernelcal_earth_rover/test/: test_wire_round_trip.py
(+399 files in other folders)
